[package]
name = "wasi-nn-tf-runtime-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "/Cargo.toml",
    # "/README.md",
    # "/build.rs",
    "/src",
]

# links = "tensorflow"

[dependencies]
lazy_static = {version = "1.4"}
libloading = {version = "0.7"}
